[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
# Web 框架
axum = "0.7"
tokio = { version = "1.0", features = ["full"] }

# 数据库 (PostgreSQL)
sqlx = { version = "0.7", features =["runtime-tokio-rustls", "postgres", "uuid", "time", "json"] }

# 序列化与反序列化
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# 其他工具
uuid = { version = "1.8", features = ["v4", "serde"] }
dotenvy = "0.15" # 用于加载环境变量
tower-http = { version = "0.5", features = ["cors"] } # 处理跨域
bcrypt = "0.15"       # 用于密码加密
jsonwebtoken = "9.3"  # 用于生成登录令牌